# ohmyscrapper

./: .coverage  .gitignore  CHANGELOG.md  CONTEXT.md  Makefile  PRD.md  PROGRESS.md  README.md  lab.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  publish-pypi.yml
.issues/: 01-persist-scraping-run-status.md  02-show-progress-during-long-cli-runs.md  03-add-configurable-retry-and-rate-limit-policy.md  04-support-headless-browser-runtime-configuration.md  05-apply-proxy-rotation-to-scraping-requests.md  06-add-bounded-browser-pool-for-concurrent-scraping.md  07-introduce-optional-queue-backed-scraping-worker.md  08-add-local-dashboard-for-scraping-jobs.md
models/: urls_manager.py
modules/: check_url.py  classify_urls.py  load_txt.py  merge_dbs.py  process_with_ai.py  scrap_urls.py  seed.py  show.py  sniff_url.py  untouch_all.py
src/ohmyscrapper/: __init__.py
src/ohmyscrapper/core/: config.py  config_files.py  string_cache.py
src/ohmyscrapper/core/default_files/: config.yaml  url_sniffing.yaml
src/ohmyscrapper/models/: urls_manager.py
src/ohmyscrapper/modules/: browser.py  cache.py  classify_urls.py  dashboard.py  load_txt.py  process_with_ai.py  scrap_urls.py  scraping_queue.py  seed.py  show.py  sniff_url.py  untouch_all.py
tests/: test_browser.py  test_classify_urls.py  test_cli.py  test_dashboard.py  test_load_txt.py  test_merge_dbs.py  test_process_with_ai.py  test_scrap_urls.py  test_scraping_queue.py  test_seed.py  test_show.py  test_sniff_url.py  test_untouch_all.py  test_urls_manager.py
